// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputText empty matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxFlex": 1,
        "WebkitFlexBasis": "0%",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "marginBottom": "8px",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexBasis": "0%",
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "marginBottom": "8px",
          "msFlexNegative": 1,
          "msFlexPositive": 1,
          "msFlexPreferredSize": "0%",
        }
      }
    >
      <input
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect="on"
        className="css-textinput-1cwyjr8 r-placeholderTextColor-1xktb6b"
        data-focusable={true}
        dir="auto"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onSelect={[Function]}
        onTouchStart={[Function]}
        readOnly={false}
        spellCheck={true}
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,1.00)",
            "borderBottomColor": "rgba(66,69,74,1.00)",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "1px",
            "color": "rgba(66,69,74,1.00)",
            "fontFamily": "Roboto Slab",
            "fontSize": "18px",
            "paddingBottom": "4px",
            "paddingLeft": "32px",
            "paddingRight": "32px",
            "paddingTop": "4px",
            "textAlign": "center",
          }
        }
        type="text"
      />
    </div>
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "WebkitTransform": "translateY(0px)",
          "color": "rgba(250,108,119,1.00)",
          "direction": "ltr",
          "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": "12px",
          "height": "18px",
          "opacity": 0,
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "12px",
          "paddingTop": "0px",
          "textAlign": "center",
          "transform": "translateY(0px)",
        }
      }
    />
  </div>
</div>
`;

exports[`InputText matches snapshot 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxFlex": 1,
        "WebkitFlexBasis": "0%",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexGrow": 1,
        "flexShrink": 1,
        "marginBottom": "8px",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexBasis": "0%",
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "marginBottom": "8px",
          "msFlexNegative": 1,
          "msFlexPositive": 1,
          "msFlexPreferredSize": "0%",
        }
      }
    >
      <input
        autoCapitalize="sentences"
        autoComplete="on"
        autoCorrect="on"
        className="css-textinput-1cwyjr8 r-placeholderTextColor-1xktb6b"
        data-focusable={true}
        dir="auto"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onSelect={[Function]}
        onTouchStart={[Function]}
        readOnly={false}
        spellCheck={true}
        style={
          Object {
            "backgroundColor": "rgba(255,255,255,1.00)",
            "borderBottomColor": "rgba(66,69,74,1.00)",
            "borderBottomStyle": "solid",
            "borderBottomWidth": "1px",
            "color": "rgba(66,69,74,1.00)",
            "fontFamily": "Roboto Slab",
            "fontSize": "18px",
            "paddingBottom": "4px",
            "paddingLeft": "32px",
            "paddingRight": "32px",
            "paddingTop": "4px",
            "textAlign": "center",
          }
        }
        type="text"
        value="Text"
      />
    </div>
    <div
      className="css-text-901oao"
      dir="auto"
      style={
        Object {
          "WebkitTransform": "translateY(0px)",
          "color": "rgba(250,108,119,1.00)",
          "direction": "ltr",
          "fontFamily": "Roboto, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
          "fontSize": "12px",
          "height": "18px",
          "opacity": 0,
          "paddingBottom": "0px",
          "paddingLeft": "0px",
          "paddingRight": "12px",
          "paddingTop": "0px",
          "textAlign": "center",
          "transform": "translateY(0px)",
        }
      }
    />
  </div>
</div>
`;
